Fixing searchbox placeholder vertical alignment in webkit

--- a/app/styles/meow-bootstrap.less
+++ b/app/styles/meow-bootstrap.less
@@ -439,6 +439,7 @@ img.avatar {
 
 .search-form .search-form-query {
     padding-left: 29px !important;
+    line-height: 140%;
 }
 
 .icon-search-fix {
